app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menghout009-personal-portfolio-deployment
  labels:
    app: menghout009-personal-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: menghout009-personal-portfolio
  template:
    metadata:
      labels:
        app: menghout009-personal-portfolio
    spec:
      containers:
        - name: menghout009-personal-portfolio
          image: kshrdautopilot/menghout009-personal-portfolio
          ports:
            - containerPort: 3000
